--- a/.env
+++ b/.env
@@ -27,7 +27,7 @@ APP_SECRET=6e07a26f799a2e87a39d384a5f45ca8d
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # .env
 
-DATABASE_URL=mysql://root:admin@db:3306/shop?serverVersion=8.0.33
+DATABASE_URL=mysql://root:admin123@db:3306/shop?serverVersion=8.0.33
 
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
